@@ -11,7 +11,7 @@ dancing: 266, dancing.png
 Pilates: 238, j0429961.gif
 Roller Blading: 816, j0412534.gif
 Jumping Rope: 680, j0283852.gif
-Cross-country skiing (4-4.9 Mph, Moderate Speed and Effort, General): 544, j0396718.gif
+Cross-country skiing: 544, j0396718.gif
 Snowshoeing: 544, j0232879.gif
 Downhill skiing (Moderate effort): 408, j0396718.gif
 Ice skating: 476, j0398303.gif
@@ -40,7 +40,7 @@ Rugby: 680
 Horseback Riding: 272, dude_on_horse.png
 Table tennis: 272, table_tennis.png
 Hockey (ice or field): 544, hockey_player.png
-Judo (Jujitsu, Karate, Kick Boxing, Tae Kwan Do): 680, judo.png
+Judo (Karate, Tae Kwan Do): 680, judo.png
 Running stairs: 1020
 Jogging: 476, jogger.png
 Running (8 Mph, 7.5 min/mile): 918
@@ -57,7 +57,7 @@ Operating Snow Blower: 306
 Gardening: 272
 Sitting in class: 122
 Sitting at a sporting event: 102
-Dancing, Fast (Disco, Folk, Square), Line Dancing, Irish Step Dancing, Polka, Contra, Country: 306
+Dancing, Fast (Disco, Folk), Line Dancing: 306
 Dancing, Ballet or Modern: 326
 Basketball (non-game, general): 408
 Playing Catch (football or baseball): 170
