@@ -1,0 +1,9 @@
+package edu.colorado.phet.fitness.control;
+
+/**
+ * Created by: Sam
+ * Apr 29, 2008 at 7:06:21 AM
+ */
+public interface ICalorieSelectionPanel {
+    void addListener( CalorieSelectionPanel.Listener listener );
+}
