@@ -1,3 +1,6 @@
+Renamed "activity" to "lifestyle" in the stacked bar chart
+Removed confusing "professional athlete" option
+
 0.00.18
 Added better behavior for heart/health indicator, based on BMI
 Fixed: Constrain slider range: Snap after release
